--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../../ao-oss-parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-stripe</artifactId><version>1.3.1-SNAPSHOT</version>
+	<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-stripe</artifactId><version>1.3.1</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -74,7 +74,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<connection>scm:git:git://github.com/aoindustries/ao-credit-cards-stripe.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/ao-credit-cards-stripe.git</developerConnection>
 		<url>https://github.com/aoindustries/ao-credit-cards-stripe</url>
-		<tag>HEAD</tag>
+		<tag>ao-credit-cards-stripe-1.3.1</tag>
 	</scm>
 
 	<issueManagement>
