--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 / <a target="${javadoc.target}" href="https://oss.aoapps.com/payments/">Payments</a>
 / <a target="${javadoc.target}" href="${project.url}">Stripe</a>]]></javadoc.breadcrumbs>
 		<description.html><![CDATA[Provider for <a target="${javadoc.target}" href="https://stripe.com/">Stripe</a>.]]></description.html>
+		<!-- SonarCloud.io -->
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<!-- Dependencies -->
 		<commons-lang3.version>3.12.0</commons-lang3.version>
 		<stripe-java.version>20.62.0</stripe-java.version>
