--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@ along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<url>https://github.com/aoindustries/ao-payments-stripe/issues</url>
 	</issueManagement>
 
+	<ciManagement>
+		<system>GitHub Actions</system>
+		<url>https://github.com/aoindustries/ao-payments-stripe/actions</url>
+	</ciManagement>
+
 	<repositories>
 		<!-- Repository required here, too, so can find parent -->
 		<repository>
